# gravity-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
